--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script type="text/javascript" src="./socket.io.js"></script>
+    <script src="js/angular-ui-router.min.js"></script>
     <script src="cordova.js"></script>
     <script src="js/location-sharing.js"></script>
     <script src="js/init.js"></script>
@@ -19,14 +20,67 @@
 
   </head>
   <body ng-controller="MapCtrl">
-    <ion-header-bar class="bar-dark" >
+
+  <div class="bar bar-header">
+    <button class="button button-icon icon ion-navicon"></button>
+    <div class="h1 title">Project SAS</div>
+    <button class="button button-clear button-positive">Edit</button>
+  </div>
+
+    <!--<ion-header-bar class="bar-dark" >
       <h1 class="title">Map</h1>
-    </ion-header-bar>
-    <ion-content>
-      <div id="map" data-tap-disabled="true"></div>
-    </ion-content>
-    <ion-footer-bar class="bar-dark">
-     <!-- <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>-->
-    </ion-footer-bar>
+
+      tabs-striped tabs-background-positive tabs-color-light
+    </ion-header-bar>-->
+
+
+    <ion-tabs class=" tabs-icon-top tabs-positive pane tabs-bottom tabs-standard">
+
+      <ion-tab title="Home" icon-on="ion-ios-home" icon-off="ion-ios-home-outline" ui-sref="home">
+        <!-- Tab 1 content -->
+            <!--<ion-content>
+              <div id="map"></div>
+            </ion-content>-->
+            <ion-nav-view name="home"></ion-nav-view>
+      </ion-tab>
+
+      <ion-tab title="Report Incident" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline" ui-sref="report">
+        <!-- Tab 2 content -->
+            <ion-nav-view name="report"></ion-nav-view>
+      </ion-tab>
+
+      <ion-tab title="Incident Tracker" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline" ui-sref="help">
+        <!-- Tab 3 content -->
+            <ion-nav-view name="help"></ion-nav-view>
+      </ion-tab>
+
+    </ion-tabs>
+
+    <script type="text/ng-template" id="home.html">
+      <ion-view title="Home">
+        <ion-content padding="true">
+          <div id="map"></div>
+        </ion-content>
+      </ion-view>
+    </script>
+
+    <script type="text/ng-template" id="report.html">
+      <ion-view title="Home">
+        <ion-content padding="true">
+          <h2>Report Inceident</h2>
+          <p>This is where you report the incident</p>
+        </ion-content>
+      </ion-view>
+    </script>
+
+    <script type="text/ng-template" id="help.html">
+      <ion-view title="Home">
+        <ion-content padding="true">
+           <h2>Using the app</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis architecto hic officia quasi excepturi sequi deleniti maiores consectetur veritatis sint?</p>
+        </ion-content>
+      </ion-view>
+    </script>
+
   </body>
 </html>
