--- a/www/index.html
+++ b/www/index.html
@@ -9,15 +9,15 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script type="text/javascript" src="./socket.io.js"></script>
+    <script src="http://192.168.1.4:8081/socket.io.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
     <script src="cordova.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
     <script src="js/location-sharing.js"></script>
     <script src="js/init.js"></script>
     <script src="js/app.js"></script>
     <!-- google maps javascript -->
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
-
+    
   </head>
   <body ng-controller="MapCtrl">
 
