--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="http://192.168.1.4:8081/socket.io.js"></script>
+    <script src="https://stark-spire-5779.herokuapp.com/socket.io.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
     <script src="cordova.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
